@@ -46,7 +46,7 @@ Compatibility:
    This release has been tested with gcc-3.6, gcc-4.1.2, gcc-4.2.3 . It should at least also compile with:
    * gcc >= 3.2
    * cygwin (gcc >= 3.2)
-   * mingw32
+   * mingw32 (with inotify and posix headers)
    * Microsoft Visual Studio .Net 2003
    * Sun Forte C++ compiler >= 5.5
    * Compaq C++ compiler
